# The-Hub-x-Fast-Learner

./: .env.example  .pre-commit-config.yaml  AUDIT.md  FONCTIONNALITES.txt  README.md  bot.py  ecosystem.config.js  leaderboard_img.py  preview_leaderboard.py  preview_scoreboard.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  seed_users.py  test_match_cog.py  test_pagination.py  test_queue_v2.py
.github/workflows/: ci.yml  deploy.yml
cogs/: admin.py  applications.py  elo_admin.py  leaderboard_weekly.py  match.py  moderation.py  open_role.py  prefix_legacy.py  queue_v2.py  riot_link.py  rules.py
cogs/match/: __init__.py  _cog.py  _constants.py  _embeds.py  _vote.py
cogs/stats/: __init__.py  _cog.py  _embeds.py  _view.py
docs/superpowers/plans/: 2026-05-09-3-queue-system.md  2026-05-15-pro-captain-pick.md  2026-05-31-captain-draft-and-map-pickban.md  2026-06-01-rating-2.0-stats.md
docs/superpowers/specs/: 2026-05-09-3-queue-system-design.md  2026-05-15-pro-captain-pick-design.md  2026-05-31-captain-draft-and-map-pickban-design.md  2026-06-01-rating-2.0-stats-design.md
scripts/: backfill_acs_games.py  diag_queue_gate.py  fix_stranded_matches.py  migrate_shared_collections.py
services/: captain_draft.py  elo_calc.py  elo_updater.py  inactivity.py  leaderboard_refresh.py  map_pick_ban.py  match_category.py  match_service.py  match_verifier.py  rating.py  repository.py  riot_api.py  riot_id.py  scoreboard_img.py  team_balancer.py
tests/: conftest.py  test_applications.py  test_bot_prefix.py  test_bot_slash.py  test_captain_draft.py  test_captain_draft_session.py  test_elo_calc.py  test_elo_updater.py  test_force_result.py  test_inactivity.py  test_leaderboard_eligibility.py  test_leaderboard_weekly.py  test_map_pick_ban.py  test_map_pick_ban_session.py  test_match_category.py  test_match_cleanup_command.py  test_match_cog.py  test_match_scoreboard_posting.py  test_match_scores.py  test_match_service.py  test_match_verifier.py  test_match_verifier_extended.py  test_migrate_shared_collections.py  test_moderation.py  test_open_role.py  test_pagination.py  test_queue_v2.py  test_rating_formula.py  test_repository_helpers.py  test_repository_rating.py  test_riot_api.py  test_riot_api_rounds_parsing.py  test_riot_id.py  test_riot_link.py  test_rules.py  test_scoreboard_img.py  test_shared_collections.py  test_startup_cleanup.py  test_stats_cog.py  test_team_balancer.py  (+1 more)
