# Centralized config: ruff, mypy, pytest.
# No [build-system] section -- the project is not packageable
# (entry point = bot.py via PM2), it's just a script + cogs.

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "__pycache__",
    ".venv",
    "venv",
    "preview_leaderboard.py",  # dev tool, never run in prod
    "seed_users.py",           # dev tool, never run in prod
]

[tool.ruff.lint]
# Rules activees : style basique + bugbear + simplify + naming + securite
# + builtins shadow + modernization + return-style + ruff-specific.
# RUF001/RUF003 (ambiguous unicode) disabled: we keep our emojis.
# S101 disabled on tests (pytest asserts are legitimate).
select = ["E", "F", "W", "B", "C90", "SIM", "N", "A", "UP", "RET", "RUF", "I"]
ignore = [
    "E501",      # line too long -- on a black/format
    "RUF001",    # ambiguous unicode in strings (intentional emojis)
    "RUF003",    # ambiguous unicode in comments
    "B008",      # mutable default arg (false positives on dpytest fixtures)
    "C901",      # complexity -- handled separately by radon
    "RET504",    # unnecessary assignment before return -- style perso
    "N818",      # exception naming Error suffix -- corrige en masse
]

[tool.ruff.lint.per-file-ignores]
# Tests: we tolerate asserts, pseudo-random, late imports (mongomock
# must patch before importing bot), list concat style, semicolons,
# short names (`l` for len), unused locals (mocks).
"test_*.py"   = [
    "S101", "S311", "E402", "E702", "E741",
    "F841", "RUF005", "RUF059", "RUF043",
    "SIM103", "SIM118",
    # Algo names (ABBAABBA snake-draft, capA leader): the case carries
    # semantic info, we keep it.
    "N802",
]
"conftest.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# No --strict for now: ~180 errors to fix. Lax mode
# at first, we'll tighten progressively as fixes land.
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "preview_leaderboard.py",
    "seed_users.py",
]

# bot.py + cogs/* : many `interaction.guild_id: int | None` passed
# to `repository.*` which expects `int | str`, and `interaction.guild: Guild | None`
# deref'd without a guard. In practice, slash commands are guild-only
# (DMs never enabled), so these None never fire at runtime.
# The bot.py (cogs) refactor will eliminate most of these patterns.
# In the meantime: we tolerate `union-attr` and `arg-type` to avoid
# the noise. `assignment` (default None for a typed Member param) tolerated
# too for the legacy prefix commands.
[[tool.mypy.overrides]]
module = ["bot", "cogs.*"]
disable_error_code = ["union-attr", "arg-type", "assignment", "method-assign"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Lets tests import `bot`, `cogs`, `services` from the project root
# sans manipuler sys.path.
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    # discord.utils.get called on iterable mocks produces this non-awaited
    # coroutine. Harmless in tests (the mocks do not dispatch).
    "ignore:coroutine '_aget' was never awaited:RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
